# cluster-glue

./: .hgignore  .hgsigs  .hgtags  AUTHORS  COPYING  COPYING.LIB  ChangeLog  GNUmakefile  Makefile.am  README.md  autogen.sh  buildversion.sh  cluster-glue-fedora.spec  cluster-glue-suse.spec  configure.ac
config/: Makefile.am  byteorder_test.c
doc/: Makefile.am  ha_logd.xml.in  ha_logger.xml.in  hb_report.8.txt  hb_report.xml  hb_report.xml.in  meatclient.xml.in  stonith.xml.in
doc/stonith/: Makefile.am  README.cyclades  README.drac3  README.dracmc  README.external  README.ibmrsa  README.ibmrsa-telnet  README.ippower9258  README.meatware  README.rackpdu  README.rcd_serial  README.riloe  README.vacm  README.vcenter  README.wti_mpc
hb_report/: Makefile.am  ha_cf_support.sh  hb_report.in  openais_conf_support.sh  utillib.sh
include/: Makefile.am  compress.h  glue_config.h.in  ha_msg.h  lha_internal.h  replace_uuid.h
include/clplumbing/: .cvsignore  GSource.h  GSource_internal.h  Gmain_timeout.h  Makefile.am  apphb_cs.h  base64.h  cl_log.h  cl_malloc.h  cl_misc.h  cl_pidfile.h  cl_plugin.h  cl_poll.h  cl_quorum.h  cl_quorumd.h  cl_random.h  cl_reboot.h  cl_signal.h  cl_syslog.h  cl_tiebreaker.h  cl_uuid.h  coredumps.h  cpulimits.h  ipc.h  loggingdaemon.h  longclock.h  lsb_exitcodes.h  md5.h  mkstemp_mode.h  netstring.h  pidfile.h  proctrack.h  realtime.h  recoverymgr_cs.h  replytrack.h  setproctitle.h  timers.h  ttylock.h  uids.h
include/lrm/: .cvsignore  Makefile.am  lrm_api.h  lrm_msg.h  racommon.h  raexec.h
include/pils/: .cvsignore  Makefile.am  generic.h  interface.h  plugin.h  plugin.h.in
include/stonith/: .cvsignore  Makefile.am  expect.h  st_ttylock.h  stonith.h  stonith_plugin.h
lib/: Makefile.am
lib/clplumbing/: .cvsignore  GSource.c  Gmain_timeout.c  Makefile.am  base64.c  base64_md5_test.c  cl_compress.c  cl_log.c  cl_malloc.c  cl_misc.c  cl_msg.c  cl_msg_types.c  cl_netstring.c  cl_pidfile.c  cl_plugin.c  cl_poll.c  cl_random.c  cl_reboot.c  cl_signal.c  cl_syslog.c  cl_uuid.c  coredumps.c  cpulimits.c  ipcsocket.c  ipctest.c  ipctransient.h  ipctransientclient.c  ipctransientlib.c  ipctransientserver.c  longclock.c  md5.c  mkstemp_mode.c  netstring_test.c  ocf_ipc.c  pidfile.c  proctrack.c  realtime.c  replytrack.c  setproctitle.c  timers.c  (+3 more)
lib/lrm/: Makefile.am  clientlib.c  lrm_msg.c  racommon.c
lib/pils/: .cvsignore  Makefile.am  main.c  pils.c  test.c
lib/plugins/: Makefile.am
lib/plugins/HBcompress/: Makefile.am  zlib.c
lib/plugins/InterfaceMgr/: HBauth.c  Makefile.am  generic.c
lib/plugins/compress/: Makefile.am  bz2.c  zlib.c
lib/plugins/lrm/: .cvsignore  Makefile.am  raexechb.c  raexeclsb.c  raexecocf.c  raexecupstart.c  upstart-dbus.c  upstart-dbus.h
lib/plugins/lrm/dbus/: Makefile.am  com.ubuntu.Upstart.Instance.xml  com.ubuntu.Upstart.Job.xml  com.ubuntu.Upstart.xml
lib/plugins/stonith/: .cvsignore  Makefile.am  README.bladehpi  README.cyclades  README.drac3  README.external  README.ibmbc  README.ipmilan  README.riloe  apcmaster.c  apcmastersnmp.c  apcmastersnmp.cfg.example  apcsmart.c  apcsmart.cfg.example  baytech.c  bladehpi.c  cyclades.c  drac3.c  drac3_command.c  drac3_command.h  drac3_hash.c  drac3_hash.h  external.c  ibmbc.c  ibmhmc.c  ipmi_os_handler.c  ipmilan.c  ipmilan.h  ipmilan_command.c  ipmilan_test.c  meatclient.c  meatware.c  null.c  nw_rpc100s.c  rcd_serial.c  rhcs.c  ribcl.py  ribcl.py.in  riloe.c  riloe.in  (+10 more)
lib/stonith/: .cvsignore  Makefile.am  README  expect.c  ha_log.sh  main.c  meatclient.8  meatclient.c  sbd-common.c  sbd-md.c  sbd.c  sbd.h  st_ttylock.c  stonith.8  stonith.c  stonith_logger
logd/: .cvsignore  Makefile.am  ha_logd  ha_logd.8  ha_logd.c  ha_logger  ha_logger.1  ha_logger.c  logd.cf  logd.in  logd.service.in  logtest.c
lrm/: .cvsignore  Makefile.am
lrm/admin/: .cvsignore  Makefile.am  cibsecret.in  lrmadmin.c  lrmadmin.txt
lrm/lrmd/: .cvsignore  Makefile.am  audit.c  cib_secrets.c  lrm_msg.c  lrmd.c  lrmd.h  lrmd_fdecl.h
lrm/test/: .cvsignore  Dummy-lsb  LRMBasicSanityCheck  LRMBasicSanityCheck.in  Makefile.am  README.regression  add_del_rsc  add_del_rsc.exp  apitest.c  apitest.exp  callbacktest.c  daemon_for_lsb.sh  daemon_for_ocf.sh  defaults  descriptions  evaltest.sh  language  lrmadmin-interface  lrmregtest-heartbeat.in  lrmregtest-lsb  lrmregtest.in  lsb_initscript_sim.sh  ocf_script_sim.sh  plugintest.c  ra_info  ra_info.exp  regression.sh  regression.sh.in  simple_ops  simple_ops.exp  simple_ops.in  test.sh  test_target_rc  test_target_rc.exp  test_target_rc_changed  test_target_rc_changed.exp  test_target_rc_everytime  test_target_rc_everytime.exp
lrm/test/testcases/: BSC  Makefile.am  basicset  common.filter  flood  flood.exp  metadata  metadata.exp  ra-list.sh  rscexec  rscexec.exp  rscmgmt  rscmgmt.exp  rscmgmt.log_filter  serialize  serialize.exp  stonith  stonith.exp  xmllint.sh
replace/: Makefile.am  NoSuchFunctionName.c  daemon.c  setenv.c  strerror.c  strlcat.c  strlcpy.c  strndup.c  strnlen.c  unsetenv.c  uuid_parse.c
